fix: adjust gap in LazyLoad component and CSS for consistent layout

--- a/src/styles/lazyload.css
+++ b/src/styles/lazyload.css
@@ -3,15 +3,12 @@
   flex-direction: column;
   gap: 3px;
   align-items: center;
+  margin-left: 30px;
 }
 
 .lazy-row {
   display: flex;
-  gap: 0;
+  gap: 3px;
   width: 70vw;
 }
 
-
-/* .lazy-load-image-background {
-  margin-bottom: 10px;
-} */
